# xposter

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml  requirements.txt
data/: mstd.json
src/: __main__.py  bsky.py  config.py  http.py  main.py  mastodon.py  parsers.py
tests/: README.md
tests/data/: mstd.json  outbox.json  outbox.py
tests/unit/: test_bsky.py  test_mastodon.py  test_parsers.py
